@@ -43,6 +43,8 @@ Not yet released.
 - #176: get model attribute instead of column name when getting name of primary
   key.
 - #182: allow :http:method:`post` requests that set hybrid properties.
+- #195: convert UUID objects to strings when converting an instance of a model
+  to a dictionary.
 
 Version 0.9.3
 -------------
